@@ -1,5 +1,8 @@
 2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/relocate.cc (setup_paths) [__MINGW32__]: Comment-out broken
+	relocation code.
+
 	* stepmake/stepmake/generic-vars.make (INSTALL): Assign INSTALL_PY
 	iso itself.
 
